changed html file name

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ body {
     justify-content: center;
     height: 100vh;
     flex-direction: column;
-    margin-left: 7rem;
+    margin-left: 7DevA-glitch/Tic_tac_toe-GAMErem;
 }
 
 h3 {
